第二次提交

--- a/list.html
+++ b/list.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品列表页</title>
+    <title>商品列表页abc</title>
     <link rel="stylesheet" href="css/list.css">
 </head>
 
 <body>
-   
+
     <div class="list">
         <ul>
 
@@ -18,7 +18,7 @@
 
     <script src="script/ajaxpromise.js"></script>
     <script src="script/list.js"></script>
-   
+
 </body>
 
 </html>
